@@ -16,7 +16,7 @@ postscript or TeX hardcopy output with the help of the texinfo.tex
 file.  You can download the full documentation package or read it
 online from the repository.
 
-	http://www.dmalloc.com/
+	http://dmalloc.com/
 
 -------------------------------------------------------------------------------
 
@@ -49,8 +49,8 @@ If you have any questions, comments, or problems feel free to send me
 mail.
 
 Gray Watson
-http://www.dmalloc.com/
+http://dmalloc.com/
 
 -------------------------------------------------------------------------------
-$Id: README.1,v 1.56 1999/03/04 19:15:22 gray Exp $
+$Id: README.1,v 1.57 2000/03/20 23:19:18 gray Exp $
 -------------------------------------------------------------------------------
