@@ -4,13 +4,13 @@ GZIP:
 
 All the files in this directory have been gzip'ed.  Gzip, the gnu
 compression program, is much superior to compress and is also free
-software.  See http://www.256.com/gzip/ for more information.
+software.  See http://256.com/sources/gzip/ for more information.
 
 -------------------------------------------------------------------------------
 
 Gray Watson
-http://www.dmalloc.com/
+http://dmalloc.com/
 
 -------------------------------------------------------------------------------
-$Id: README_ftp.1,v 1.19 1999/03/09 05:00:21 gray Exp $
+$Id: README_ftp.1,v 1.20 2000/03/20 23:19:18 gray Exp $
 -------------------------------------------------------------------------------
