@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: arg_check.c,v 1.22 1999/11/08 20:40:29 gray Exp $
+ * $Id: arg_check.c,v 1.23 2000/03/20 23:19:18 gray Exp $
  */
 
 /*
@@ -44,10 +44,10 @@
 
 #if INCLUDE_RCS_IDS
 #ifdef __GNUC__
-#ident "$Id: arg_check.c,v 1.22 1999/11/08 20:40:29 gray Exp $";
+#ident "$Id: arg_check.c,v 1.23 2000/03/20 23:19:18 gray Exp $";
 #else
 static	char	*rcs_id =
-  "$Id: arg_check.c,v 1.22 1999/11/08 20:40:29 gray Exp $";
+  "$Id: arg_check.c,v 1.23 2000/03/20 23:19:18 gray Exp $";
 #endif
 #endif
 
