@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: compat.h,v 1.36 1999/03/08 19:07:50 gray Exp $
+ * $Id: compat.h,v 1.37 2000/03/20 23:19:21 gray Exp $
  */
 
 #ifndef __COMPAT_H__
