@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: dmalloc.h.1,v 1.11 1999/03/04 19:12:19 gray Exp $
+ * $Id: dmalloc.h.1,v 1.12 2000/03/20 23:19:23 gray Exp $
  */
 
 #ifndef __DMALLOC_H__
