@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: dmalloc_loc.h,v 1.42 1999/03/08 04:59:18 gray Exp $
+ * $Id: dmalloc_loc.h,v 1.43 2000/03/20 23:19:23 gray Exp $
  */
 
 #ifndef __DMALLOC_LOC_H__
@@ -34,7 +34,7 @@
 /*
  * web home directory
  */
-#define DMALLOC_HOME		"http://www.dmalloc.com/"
+#define DMALLOC_HOME		"http://dmalloc.com/"
 
 /*
  * standard int return codes
