@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: dmalloc_tab.c,v 1.9 1999/03/11 22:26:03 gray Exp $
+ * $Id: dmalloc_tab.c,v 1.10 2000/03/20 23:19:25 gray Exp $
  */
 
 /*
@@ -48,10 +48,10 @@
 
 #if INCLUDE_RCS_IDS
 #ifdef __GNUC__
-#ident "$Id: dmalloc_tab.c,v 1.9 1999/03/11 22:26:03 gray Exp $";
+#ident "$Id: dmalloc_tab.c,v 1.10 2000/03/20 23:19:25 gray Exp $";
 #else
 static	char	*rcs_id =
-  "$Id: dmalloc_tab.c,v 1.9 1999/03/11 22:26:03 gray Exp $";
+  "$Id: dmalloc_tab.c,v 1.10 2000/03/20 23:19:25 gray Exp $";
 #endif
 #endif
 
