@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: error.h,v 1.43 1999/03/10 21:38:32 gray Exp $
+ * $Id: error.h,v 1.44 2000/03/20 23:19:26 gray Exp $
  */
 
 #ifndef __ERROR_H__
