@@ -16,9 +16,9 @@
  * software described herein for any purpose.  It is provided "as is"
  * without express or implied warranty.
  *
- * The author may be contacted via http://www.dmalloc.com/
+ * The author may be contacted via http://dmalloc.com/
  *
- * $Id: settings.dist,v 1.44 1999/10/11 23:59:16 gray Exp $
+ * $Id: settings.dist,v 1.45 2000/03/20 23:19:28 gray Exp $
  */
 
 /*
